# logstream

./: .gitignore  Cargo.toml  DOCUMENTATION.md  LICENSE  README.md
benches/: performance_tests.rs
config/: client.toml  server.toml
examples/: client_example.rs  complete_workflow.rs  multi_daemon.rs  server_example.rs
scripts/: benchmark.sh  setup.sh
src/: lib.rs  main.rs
src/client/: journald.rs  logger.rs  mod.rs
src/config/: mod.rs  settings.rs
src/server/: mod.rs  rotation.rs  storage.rs  unix_socket.rs
src/types/: log_entry.rs  mod.rs
tests/: integration_tests.rs  rotation_tests.rs
