[package]
name = "logstream"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance centralized logging solution in Rust"
license = "MIT"
repository = "https://github.com/yourusername/logstream"
keywords = ["logging", "centralized", "systemd", "journald", "performance"]
categories = ["development-tools::debugging"]

[[bin]]
name = "logstream-server"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging and tracing
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# System integration
systemd-journal-logger = { version = "2.1", optional = true }
tracing-journald = { version = "0.3", optional = true }
syslog = { version = "6.1", optional = true }

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive"] }

# Performance and utilities
bytes = "1.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "5.5"
arc-swap = "1.6"
parking_lot = "0.12"

# Compression
flate2 = { version = "1.0", optional = true }
lz4_flex = { version = "0.11", optional = true }

# Metrics
prometheus = { version = "0.13", optional = true }

# System utilities
gethostname = "0.4"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
rand = "0.8"

[features]
default = ["unix-sockets", "file-storage", "compression"]

# Backend features
unix-sockets = []
journald = ["systemd-journal-logger", "tracing-journald"]
syslog-backend = ["syslog"]

# Storage features
file-storage = []
compression = ["flate2", "lz4_flex"]

# Monitoring features
metrics = ["prometheus"]

# Performance features
simd = []

[profile.release]
debug = true  # Keep debug symbols for journald
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 0
debug = true

[[example]]
name = "server_example"
path = "examples/server_example.rs"

[[example]]
name = "client_example"
path = "examples/client_example.rs"

[[example]]
name = "multi_daemon"
path = "examples/multi_daemon.rs"

[[bench]]
name = "performance"
harness = false
